--- a/TP n°5 - Conversion d'un article/article.html
+++ b/TP n°5 - Conversion d'un article/article.html
@@ -49,7 +49,7 @@
         <li>La proximité avec l’utilisateur·ice</li>
     </ul>
     <p>
-        L’exemple le plus évident qui me vient à l’esprit, c’est l’application Vinted ; un service qui
+        L’exemple le plus évident qui me vient à l’esprit, c’est l’application <a href="https://www.vinted.fr" target="_blank" title="Lien vers le site web de Vintage">Vinted</a> ; un service qui
         permet de vendre ses propres vêtements d’occasion pour en acheter de « nouveaux » ou
         les échanger avec d’autres Vinties (nom donné aux utilisateurs·ices de Vinted). Vinted tutoie
         tout le monde, le but étant d’instaurer une notion de communauté, de proximité et de
@@ -66,6 +66,7 @@
         les messages d’encouragement ou de confirmation aide vraiment à la mise en place du
         système de gamification, et donc à la fidélisation du joueur. Le combo parfait !
     </p>
+    <img src="./img_tp5_02.png" alt="image représentant 2 cadres, dans le premier cadre une icone en forme de buste d'humain avec le texte suivant en dessous : youpi! et ton compte a bien été créé, bravo et un bouton continuer en dessous. Dans le deuxième cadre une icone d'étoile barrée avec le texte suivant en dessous : tonéquipe n'a plus d'étoile. mais tu as 50 étoiles dans ton solde personnel, souhaites-tu les utiliser pour débloquer cet indice ? puis un bouton avec le texte : utiliser 10 étoiles perso">
     <h3>Quel ton utiliser ?</h3>
     <p>
         Parfois, ce n’est pas le vouvoiement ou le tutoiement qui va nous aider à trouver un ton
@@ -93,9 +94,11 @@
         c’est à lui·elle que l’on s’adresse !
     </p>
     <h4>Exemples :</h4>
-    <quote>« Félicitations, ton/votre compte a bien été créé. »</quote>
-    <quote>« Super ! Nous sommes heureux·ses de vous compter parmis nous »</quote>
-    <quote>« Bienvenue à bord, moussaillon ! »</quote>
+    <blockquote>
+        « Félicitations, ton/votre compte a bien été créé. »
+        « Super ! Nous sommes heureux·ses de vous compter parmis nous »
+        « Bienvenue à bord, moussaillon ! »
+    </blockquote>
     <p>Pro tip : Ces petites phrases seront parfaites accompagnées de jolies illustrations maison !</p>
     <h3>Et la question du genre ?</h3>
     <p>
@@ -104,6 +107,7 @@
         des femmes. Tous les adjectifs sont accordés au féminin. Donc un homme qui souhaite
         commander des chaussures se verra appelé « elle », « la vintie », « la vendeuse » etc.
         Dommage, parce que Vinted demande le sexe de la personne dans ses paramètres !
+        <div><img src="./img_tp5_03.png" alt=""></div>
         Vinted c’est pour les filles.
     </p>
     <p>
@@ -113,7 +117,7 @@
         bon fonctionnement d’un service, mais en lui demandant plutôt à quel pronom la personne
         souhaite être adressée.
     </p>
-    <p>Découvrez les slides de sa conférence UX Rennes ou mieux, écoutez-le !</p>
+    <p>Découvrez <a href="https://docs.google.com/presentation/d/17vx3lk_PiBE9EEdP9nRqo7MOlYe22oj4WBDQsiOChVs/edit#slide=id.p" target="_blank" title="Liens vers le document de présentation de la conférence d'Antonin Le Mée à Rennes">les slides de sa conférence UX Rennes</a> ou mieux, <a href="https://www.facebook.com/WUDBretagne/videos/816343905213861/" target="_blank" title="Liens vers la vidéo de la conférence d'Antonin Le Mée à Rennes traintant du design inclusif">écoutez-le !</a></p>
     <h2>ET EN PRATIQUE, ON FAIT COMMENT ?</h2>
     <h3>Les consignes et les actions</h3>
     <p>
@@ -122,12 +126,12 @@
         devront s’adresser à elle·lui à l’impératif.
     </p>
     <h4>Exemple :</h4>
-    <quote>« Choisi une photo sympa pour ton profil ! »</quote>
-    <quote>« Sélectionnez une des options suivantes. »</quote>
+    <blockquote>« Choisi une photo sympa pour ton profil ! »
+    « Sélectionnez une des options suivantes. »</blockquote>
     <p>En revanche, les actions doivent venir de l’utilisateur, donc être à l’infinitif.</p>
     <h4>Exemple :</h4>
-    <quote>« Ajouter une photo qui déchire »</quote>
-    <quote>« Modifier mes informations »</quote>
+    <blockquote>« Ajouter une photo qui déchire »
+    « Modifier mes informations »</blockquote>
     <h3>Des labels, toujours plus de labels !</h3>
     <p>
         On pourrait avoir une règle : 1 icône = 1 label. On n’est jamais trop explicite. Seulement il
@@ -157,7 +161,8 @@
     <p>
         C’est un exemple parmi tant d’autres, mais attention tout de même à ne pas reproduire ce
         fonctionnement partout. Il fonctionne ici, mais pas forcément ailleurs.
-        Instagram n’aime pas les labels. Image issue de l’article « How icons are ruining interfaces »
+        <div><img src="./img_tp5_04.png" alt=""></div>
+        Instagram n’aime pas les labels. Image issue de l’article <cite><a href="https://axesslab.com/icons-ruining-interfaces/" target="_blank" title="">« How icons are ruining interfaces »</a></cite>
         de Hampus Sethfors
     </p>
     <p>
@@ -179,7 +184,7 @@
     </p>
     <p>
         Prenons les cookies par exemple. Axeptio (service dédié à l’accompagnement dans le
-        consentement sécurisé selon les recommandations RGPD) a rédigé un article très complet
+        consentement sécurisé selon les recommandations RGPD) a rédigé <a href="https://medium.com/axeptio/axeptio-veut-mettre-fin-aux-bandeaux-cookies-de10b2968662" target="_blank" title="">un article très complet</a>
         sur la mise en avant d’un style conversationnel plutôt que des bandeaux que les gens ne
         lisent plus. (En plus, leurs illustrations sont très jolies ! #emotion). Ils expliquent qu’en leur
         posant des questions, et en étant très clair sur l’utilisation de ces petits biscuits, les
@@ -197,15 +202,15 @@
     <p>Quelques réflexions de personnes incroyables :</p>
     <h3>En français</h3>
     <ul>
-        <li>UX Writer : mini-rédaction pour maxi-impact par Julia Osseland</li>
+        <li><cite><a href="https://medium.com/axeptio/axeptio-veut-mettre-fin-aux-bandeaux-cookies-de10b2968662" target="_blank" title="">UX Writer : mini-rédaction pour maxi-impact</a></cite> par Julia Osseland</li>
     </ul>
     <h3>En anglais</h3>
     <ul>
-        <li>Microcopy: Tiny Words With A Huge UX Impact par Nick Babich</li>
-        <li>Is this my interface or yours? par John Saito</li>
-        <li>The Art of the Error Message par Marina Posniak et Tamara Hilmes</li>
-        <li>15 marvellous microcopy examples (and how they improve UX) par Nikki Gilliland</li>
-        <li>The microcopyist: cancellation, confirmation, conflagration par Jason Fox</li>
+        <li><cite><a href="https://babich.biz/microcopy-tiny-words-with-a-huge-ux-impact/" target="_blank" title="">Microcopy: Tiny Words With A Huge UX Impact</a></cite> par Nick Babich</li>
+        <li><cite><a href="https://medium.com/@jsaito/is-this-my-interface-or-yours-b09a7a795256" target="_blank" title="">Is this my interface or yours?</a></cite> par John Saito</li>
+        <li><cite><a href="https://medium.com/s/user-friendly/the-art-of-the-error-message-9f878d0bff80" target="_blank" title="">The Art of the Error Message</a></cite> par Marina Posniak et Tamara Hilmes</li>
+        <li><cite><a href="https://econsultancy.com/15-marvellous-microcopy-examples-and-how-they-improve-ux/" target="_blank" title="">15 marvellous microcopy examples (and how they improve UX)</a></cite> par Nikki Gilliland</li>
+        <li><cite><a href="https://uxdesign.cc/the-microcopyist-cancellation-confirmation-conflagration-8a6047a4cf9" target="_blank" title="">The microcopyist: cancellation, confirmation, conflagration</a></cite> par Jason Fox</li>
     </ul>
     <hr>
     <p>Source de l’artice :</p>
